# cpp_study

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.kilo/skills/: tech-doc-writing.md
D-BUS/: CMakeLists.txt  dbus_intro.html  dbus_intro.md
D-BUS/data_acquisition/: CMakeLists.txt  README.md  data_acq_client.cpp  data_acq_control.cpp  data_acq_server.cpp
D-BUS/dbus_activation/: CMakeLists.txt  README.md  com.example.ActivationTest.service  dbus_activation_client.cpp  dbus_activation_server.cpp
D-BUS/dbus_basic/: CMakeLists.txt  README.md  dbus_client.cpp  dbus_server.cpp
D-BUS/dbus_properties/: CMakeLists.txt  README.md  dbus_properties_client.cpp  dbus_properties_server.cpp
D-BUS/dbus_signal/: CMakeLists.txt  README.md  dbus_signal_receiver.cpp  dbus_signal_sender.cpp
NetDaemon/: CMakeLists.txt  README.md
NetDaemon/include/: DNSManager.h  FirewallManager.h  NetworkInterfaceManager.h  NetworkMonitor.h  NetworkPolicyManager.h  RouteTableManager.h
NetDaemon/src/: DNSManager.cpp  FirewallManager.cpp  NetworkInterfaceManager.cpp  NetworkMonitor.cpp  NetworkPolicyManager.cpp  RouteTableManager.cpp  main.cpp
Principles_of_Code_Design/: CMakeLists.txt  README.md
Principles_of_Code_Design/1_Single_Responsibility_PRinciple/: CMakeLists.txt  README.md  bad_design.h  embedded_example.cpp  embedded_example.h  good_design.h  srp_demo.cpp
Principles_of_Code_Design/2_Open_Closed_Principle/: CMakeLists.txt  README.md  bad_design.h  good_design.h  ocp_demo.cpp
Principles_of_Code_Design/3_Liskov_Substitution_Principle/: CMakeLists.txt  README.md  bad_design.h  good_design.h  lsp_demo.cpp
Principles_of_Code_Design/4_Interface_Segregation_Principle/: CMakeLists.txt  README.md  bad_design.h  good_design.h  isp_demo.cpp
Principles_of_Code_Design/5_Dependency_Inversion_Principle/: CMakeLists.txt  README.md  bad_design.h  dip_demo.cpp  good_design.h
Principles_of_Code_Design/6_Law_of_Demeter/: CMakeLists.txt  README.md  bad_design.h  good_design.h  lod_demo.cpp
Principles_of_Code_Design/7_Composite_Reuse_Principle/: CMakeLists.txt  README.md  bad_design.h  crp_demo.cpp  good_design.h
Principles_of_Code_Design/common/: CMakeLists.txt  interfaces.h
cmake/: demo_executable.cmake  mbedtls_2_7.cmake  protobuf_helpers.cmake  sqlite3.cmake  util.cmake
cmake_practice/: cmake_path.cmake  params.cmake  变量.cmake
cmake_practice/CMakePrintHelpers/: CMakeLists.txt
cmake_practice/CMakePrintSystemInformation/: CMakeLists.txt
cpp_basic/basic_class/: basic_class.cpp
cpp_basic/class/: Cell.cpp  Cell.h  class.cpp
cpp_basic/memory/: memory.cpp
cpp_ipc/socketpair/: socketpair.cpp
cpp_ipc/splice/: splice_client.cpp  splice_server.cpp
cpp_stl/containers/: containers.md  contains.cpp
cpp_stl/vector/: containers.md  vector.cpp
cpp_test/cpp_basic/atomic/: CMakeLists.txt  atomic.cpp
cpp_test/cpp_basic/basic_class/: basic_class.cpp
cpp_test/cpp_basic/class/: CMakeLists.txt
cpp_test/cpp_basic/inheritance/: CMakeLists.txt  inheritance.cpp
cpp_test/cpp_basic/memory/: CMakeLists.txt  memory.cpp
cpp_test/cpp_event/: README.md  event.cpp
cpp_test/cpp_ipc/socketpair/: CMakeLists.txt
cpp_test/cpp_ipc/splice/: CMakeLists.txt  splice_client.cpp  splice_server.cpp
cpp_test/iceoryx_prereq/: CMakeLists.txt  expected.hpp
cpp_test/iceoryx_prereq/01_lambda/: README.md  lambda_demo.cpp
cpp_test/iceoryx_prereq/02_function_ref/: README.md  function_ref_demo.cpp
cpp_test/iceoryx_prereq/03_crtp/: README.md  crtp_demo.cpp
cpp_test/iceoryx_prereq/04_expected/: README.md  expected_demo.cpp
cpp_test/iceoryx_prereq/05_monadic/: README.md  monadic_demo.cpp
cpp_test/iceoryx_prereq/06_placement_new/: README.md  placement_new_demo.cpp
design_patterns/Observer/: Observer.cpp
design_patterns/Singleton/: CMakeLists.txt  Singleton.cpp
docs/: CMAKE_MODERNIZATION.md
fastdds_test/: CMakeLists.txt  README.md
fastdds_test/1_hello_world/: CMakeLists.txt  HelloWorld.idl  README.md  publisher.cpp  subscriber.cpp
fastdds_test/2_custom_types/: CMakeLists.txt  README.md  publisher.cpp  subscriber.cpp
fastdds_test/2_custom_types/idl/: CustomData.idl
fastdds_test/3_request_reply/: CMakeLists.txt  README.md  replier.cpp  requester.cpp
fastdds_test/3_request_reply/idl/: RequestReply.idl
fastdds_test/4_qos_config/: CMakeLists.txt  README.md  publisher.cpp  subscriber.cpp
fastdds_test/5_data_sharing/: CMakeLists.txt  README.md  publisher.cpp  subscriber.cpp
fastdds_test/6_tcp_transport/: CMakeLists.txt  README.md  publisher.cpp  subscriber.cpp
fastdds_test/7_monitoring/: CMakeLists.txt  README.md  monitor.cpp
fastdds_test/8_discovery/: CMakeLists.txt  README.md  discovery_participant.cpp
fastdds_test/9_security/: CMakeLists.txt  README.md  publisher.cpp  subscriber.cpp
fastdds_test/common/: CMakeLists.txt
fastdds_test/common/include/: Common.hpp
fastdds_test/common/src/: Common.cpp
opensource_test/contact/: CMakeLists.txt  contact.proto
opensource_test/json_parser/: CMakeLists.txt  json_parser.c  json_parser.h  main.c
opensource_test/jsoncpp_test/: CMakeLists.txt  main.cpp
opensource_test/mbedtls/: CMakeLists.txt
opensource_test/mbedtls/mbedtls_1_Base64/: CMakeLists.txt  mbedtls_1_Base64.c
opensource_test/mbedtls/mbedtls_2_ciphersuite_list/: mbedtls_2_ciphersuite_list.c
opensource_test/mbedtls/mbedtls_3_ecdh/: CMakeLists.txt  mbedtls_3_ecdh.c  mbedtls_3_ecdh_client.c  mbedtls_3_ecdh_server.c
opensource_test/proto/contact/: CMakeLists.txt  README.md  contact.proto  main.cpp
opensource_test/proto/protobuf_json/: CMakeLists.txt  main.cpp  test_json.proto
opensource_test/proto/protobuf_test/: CMakeLists.txt  testread.cpp
opensource_test/proto/protobus/: CMakeLists.txt  message.proto
opensource_test/protobuf_json/: CMakeLists.txt
opensource_test/protobuf_test/: CMakeLists.txt  protobuf_test.cpp  testwrite.cpp
opensource_test/protobus/: message.proto
opensource_test/rapidjson_test/: CMakeLists.txt  main.cpp  tets.json
opensource_test/sqlite_test/: CMakeLists.txt
python/: hash.py  myargs.py  myclass.py  myjson.py  os_path.py
(+44 files in other folders)
